# pyrtm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  buildozer.spec  main.py  pyproject.toml  roguetrader.kv  tests.py  utils.py
.github/workflows/: python_linting.yml  python_tests.yml
