[tool.poetry]
name = "pyrtm"
version = "0.1.0"
description = "A kivy app to manage Rogue Trader characters"
authors = ["Björn Guth <scatty@bguth.de>"]

[tool.poetry.dependencies]
python = "^3.7"
kivy = "^1.11"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
